fdo#59158 About dialog Website button link fix for zh-CN and zh-TW

Change-Id: I85007bf689bb6c7119a4971f0bd925beccb8bd30